--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,5 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-</head></html>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<title>Module 2 assignment solution</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+	<h1> Web Development </h1>
+	<div class="row">
+		<div class="col-lg-4 col-md-6 col-sm-12">
+			<section class="HTML">
+				<h2>HTML</h2>
+				<p>
+					HTML stands for hyper taxt markup language.Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the documents.
+</section>
+</div>
+<div class="col-lg-4 col-md-6 col-sm-12">
+	<section class="CSS">
+		<h2>CSS</h2>
+		<p>
+			CSS stands for cascading stylesheets.Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.[2]
+</p>
+</section>
+</div>
+<div class="col-lg-4 col-md-6 col-sm-12">
+	<section class="JAVASCRIPT">
+		<h2>JAVASCRIPT</h2>
+		<p>JavaScript (/ˈdʒɑːvəˌskrɪpt/),[6] often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.[7] JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has curly-bracket syntax, dynamic typing, prototype-based object-orientation.
+
+</p>
+</section>
+</div>
+</div>
+</body>
+</html>
